# lab-mltest-rs

./: Cargo.toml
src/: functions.rs  lib.rs  multiverse.rs  storage.rs
src/core/: mod.rs  types.rs
src/evolution/: hooks.rs  mod.rs  simulation.rs
src/evolution/hooks/: basics.rs  best_agent.rs  mod.rs
src/evolution/presets/: basic.rs  mod.rs
src/neural/: agent.rs  agent_memory.rs  agent_storage.rs  byte_stack.rs  config.rs  execution.rs  genome.rs  instructions.rs  memory.rs  mod.rs  multiverse.rs  mutation.rs  opcode.rs  spawner.rs  storage.rs  vm_network.rs
src/neural/memory/: mod.rs  private_memory.rs  shared_memory.rs
src/sim/: engine.rs  mod.rs  multiverse.rs  runner.rs  storage.rs  task.rs
src/sim/core/: events.rs  mod.rs  resolution.rs
src/sim/runner/: engine.rs  mod.rs  population.rs  session.rs
src/sim/state/: community.rs  mod.rs  multiverse.rs
src/storage/: agent.rs  mod.rs  multiverse.rs
src/tasks/: constant.rs
src/templates/: basic.rs
src/vm/: executor.rs  isa.rs  mod.rs  traits.rs
