[package]
name = "lab-mltest"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = { version = "3.20.0", features = ["macros"] }
ordered-float = { version = "4.6", features = ["serde"] }
anyhow = "1.0.102"
tempfile = "3.27.0"
